  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Removed write capability to the UrlVFS. Now http:// files are marked
  read-only. (Eric Le Lay # 2805986)
  
- When having two monitors the About dialog was appearing between them, one half
  on each monitor. Now it's position is relative to the active View
  (Matthieu Casanova)

}}}
{{{ API changes

- File System Browser dynamic menu support (#2938170 - François Rey)

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now each editPane have its own bufferSet,
  does not share it with other editPanes. The bufferset scope is the
  same for all EditPanes. (Matthieu Casanova)

- Status bar widget : it is now possible to use labels starting with letters
  in status bar. (Matthieu Casanova)

- Removed long deprecated TextArea#isDragInProgress() and
  TextArea#setDragInProgress(). (SF.net patch #2809776,2936146 - Kevin Hunter)

- EditBus.send() will now always deliver messages on the AWT thread, although
  it can be called from any thread. (Marcelo Vanzin)

- Added EditBus.sendAsync(): this just enqueues messages to be send over
  the EditBus as soon as the AWT thread is not busy, and returns immediately.
   (Marcelo Vanzin)

- Added ability to tag classes with EditBus.EBHandler. This is only useful
  when tagging an EditPlugin class, and makes the plugin instance behave
  as if it implemented EBComponent (it's added to the bus when the plugin
  is activated). (Marcelo Vanzin)

- Temporary buffers do not send BufferUpdate.PROPERTIES_CHANGED messages anymore
  (patch #2932330) (Dale Anson)

}}}
{{{ Editing

- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Added logtalk.xml mode file (#1945284 - Paulo Moura)

- Added regex.xml mode file (#2782258 - Kevin Hunter)

}}}
{{{ Miscellaneous
